--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,140 @@
-.App {
+.container {
+  padding-top: 2em;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.first-container {
+  border: 2px solid white;
+  border-radius: 7px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0.5rem 1.2em;
+  display: flex;
+  justify-content: space-between;
+  place-items: center;
+  width: 80%;
+}
+.logo {
+  /* width: 40%; */
+  transform: scale(0.8);
+}
+
+.score-board {
+  list-style-type: none;
+  padding: 0.7rem 2rem;
+  color: white;
+  height: fit-content;
+  background-color: rgb(255, 255, 255);
   text-align: center;
+  border-radius: 7px;
+  transform: scale(0.8);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.number {
+  color: hsl(229, 25%, 31%);
+  font-size: 50px;
+  font-weight: 600;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.picked {
+  color: white;
+  margin-left: auto;
+  margin-right: auto;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: medium;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.cards {
+  width: 100%;
+  display: grid;
+  place-content: center;
+  background-image: url("./images/bg-triangle.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  /* transform: scale(0.65); */
+}
+.cards_step2 {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.rock {
+  display: flex;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.transparent {
+  background-color: transparent;
+  border: 20px solid hsla(230, 89%, 65%, 0.163);
+  box-shadow: 1px 7px transparent;
+  padding: 2em;
+  border-radius: 100%;
+}
+
+.rules {
+  color: white;
+  border: 1px solid white;
+  width: fit-content;
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
+  padding-left: 1.3em;
+  padding-right: 1.3em;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 0.9rem;
+  letter-spacing: 0.2rem;
+}
+.rules-bg {
+  /* position: absolute;
+  bottom: 0; */
+  display: flex;
+  justify-content: center;
+}
+#rules {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.cols {
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: center;
+  align-items: center;
+}
+
+.decision {
+  color: white;
+  width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  place-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.decision h2 {
+  font-size: 2rem;
+  font-weight: bold;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.decision > p {
+  color: black;
+  font-weight: bold;
+  background-color: white;
+  border: 1px solid white;
+  width: fit-content;
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
+  padding-left: 1.3em;
+  padding-right: 1.3em;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 0;
+  font-size: 0.9rem;
+  letter-spacing: 0.2rem;
 }
